--- a/NormsNotes.html
+++ b/NormsNotes.html
@@ -1,3 +1,9 @@
+---
+title: Norms Notes
+permalink: /norms/
+layout: home
+---
+
 <!DOCTYPE html>
 <!-- Created by pdf2htmlEX (https://github.com/pdf2htmlEX/pdf2htmlEX) -->
 <html xmlns="http://www.w3.org/1999/xhtml">
