--- a/grade.html
+++ b/grade.html
@@ -1,5 +1,11 @@
-- title: Grade Calculator
-  url: /grade.html
+---
+title: Grade Calculator
+layout: default
+nav_order: 5
+---
+
+<!-- Redirect to the real HTML calculator -->
+<meta http-equiv="refresh" content="0; url=/grade.html">
 
 <!DOCTYPE html>
 <html lang="en">
