--- a/grade.html
+++ b/grade.html
@@ -1,10 +1,3 @@
----
-title: Grade Calculator
-layout: default
-nav_order: 5
----
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,12 +6,15 @@ nav_order: 5
   <style>
     body {
       font-family: Arial;
-      margin: 40px auto;
+      margin: 0 auto;
       max-width: 700px;
       background-color: #f7f7f7;
       padding: 20px;
+      padding-top: 100px; /* Push down under navbar */
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      position: relative;
+      z-index: 0;
     }
     .slider-block {
       margin-bottom: 20px;
@@ -26,6 +22,7 @@ nav_order: 5
     label {
       display: block;
       font-weight: bold;
+      margin-bottom: 5px;
     }
     input[type="range"] {
       width: 100%;
@@ -33,63 +30,77 @@ nav_order: 5
     .output {
       font-size: 1.4em;
       font-weight: bold;
-      margin-top: 20px;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
   <h2>Final Grade Calculator</h2>
 
-  <!-- Sliders -->
-  <div class="slider-block"><label>Exam 1 (17%)</label>
+  <div class="slider-block">
+    <label>Exam 1 (17%)</label>
     <input type="range" id="exam1" min="0" max="100" value="80">
     <span id="val_exam1">80</span>
   </div>
 
-  <div class="slider-block"><label>Exam 2 (17%)</label>
+  <div class="slider-block">
+    <label>Exam 2 (17%)</label>
     <input type="range" id="exam2" min="0" max="100" value="80">
     <span id="val_exam2">80</span>
   </div>
 
-  <div class="slider-block"><label>Exam 3 - Part A (50% of 17%)</label>
+  <div class="slider-block">
+    <label>Exam 3 - Part A (50% of 17%)</label>
     <input type="range" id="exam3a" min="0" max="100" value="80">
     <span id="val_exam3a">80</span>
   </div>
 
-  <div class="slider-block"><label>Exam 3 - Part B (50% of 17%)</label>
+  <div class="slider-block">
+    <label>Exam 3 - Part B (50% of 17%)</label>
     <input type="range" id="exam3b" min="0" max="100" value="80">
     <span id="val_exam3b">80</span>
   </div>
 
-  <div class="slider-block"><label>Final Exam (30%)</label>
+  <div class="slider-block">
+    <label>Final Exam (30%)</label>
     <input type="range" id="finalExam" min="0" max="100" value="80">
     <span id="val_finalExam">80</span>
   </div>
 
-  <div class="slider-block"><label>Homework (9%)</label>
+  <div class="slider-block">
+    <label>Homework (9%)</label>
     <input type="range" id="homework" min="0" max="100" value="90">
     <span id="val_homework">90</span>
   </div>
 
-  <!-- 5 Quizzes -->
   <h3>Quizzes (Each 2%)</h3>
-  <div class="slider-block"><label>Quiz 1</label>
+
+  <div class="slider-block">
+    <label>Quiz 1</label>
     <input type="range" id="quiz1" min="0" max="100" value="90">
     <span id="val_quiz1">90</span>
   </div>
-  <div class="slider-block"><label>Quiz 2</label>
+
+  <div class="slider-block">
+    <label>Quiz 2</label>
     <input type="range" id="quiz2" min="0" max="100" value="90">
     <span id="val_quiz2">90</span>
   </div>
-  <div class="slider-block"><label>Quiz 3</label>
+
+  <div class="slider-block">
+    <label>Quiz 3</label>
     <input type="range" id="quiz3" min="0" max="100" value="90">
     <span id="val_quiz3">90</span>
   </div>
-  <div class="slider-block"><label>Quiz 4</label>
+
+  <div class="slider-block">
+    <label>Quiz 4</label>
     <input type="range" id="quiz4" min="0" max="100" value="90">
     <span id="val_quiz4">90</span>
   </div>
-  <div class="slider-block"><label>Quiz 5</label>
+
+  <div class="slider-block">
+    <label>Quiz 5</label>
     <input type="range" id="quiz5" min="0" max="100" value="90">
     <span id="val_quiz5">90</span>
   </div>
@@ -102,13 +113,10 @@ nav_order: 5
       "quiz1", "quiz2", "quiz3", "quiz4", "quiz5"
     ];
 
-    sliders.forEach(id => {
-      document.getElementById(id).oninput = update;
-    });
-
     function update() {
       sliders.forEach(id => {
-        document.getElementById("val_" + id).textContent = document.getElementById(id).value;
+        const slider = document.getElementById(id);
+        document.getElementById("val_" + id).textContent = slider.value;
       });
 
       const e1 = parseFloat(document.getElementById("exam1").value);
@@ -117,20 +125,19 @@ nav_order: 5
       const e3b = parseFloat(document.getElementById("exam3b").value);
       const final = parseFloat(document.getElementById("finalExam").value);
       const hw = parseFloat(document.getElementById("homework").value);
-      const q = [
-        "quiz1", "quiz2", "quiz3", "quiz4", "quiz5"
-      ].map(id => parseFloat(document.getElementById(id).value));
+      const quizzes = ["quiz1", "quiz2", "quiz3", "quiz4", "quiz5"].map(id =>
+        parseFloat(document.getElementById(id).value)
+      );
 
       const exam3 = (e3a + e3b) / 2;
 
-      // Weights
       const total =
         0.17 * e1 +
         0.17 * e2 +
         0.17 * exam3 +
         0.30 * final +
         0.09 * hw +
-        0.02 * q.reduce((a,b) => a + b, 0);
+        0.02 * quizzes.reduce((a, b) => a + b, 0);
 
       let letter = "F";
       if (final < 50) {
@@ -150,6 +157,12 @@ nav_order: 5
         "Final Score: " + total.toFixed(2) + " | Letter Grade: " + letter;
     }
 
+    // Attach event listeners
+    sliders.forEach(id => {
+      document.getElementById(id).addEventListener("input", update);
+    });
+
+    // Initial calculation
     update();
   </script>
 </body>
