--- a/grade.html
+++ b/grade.html
@@ -5,104 +5,130 @@
   <title>Grade Calculator</title>
   <style>
     body {
-      font-family: Arial;
+      font-family: Arial, sans-serif;
       margin: 0 auto;
-      max-width: 700px;
-      background-color: #f7f7f7;
+      max-width: 750px;
+      background-color: #f0f2f5;
       padding: 20px;
-      padding-top: 100px; /* Push down under navbar */
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      position: relative;
-      z-index: 0;
+      padding-top: 100px;
     }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 40px;
+      color: #333;
+    }
+
+    .section {
+      background-color: white;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 30px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    .section h3 {
+      margin-top: 0;
+      color: #0057a4;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 5px;
+    }
+
     .slider-block {
       margin-bottom: 20px;
     }
+
     label {
       display: block;
       font-weight: bold;
       margin-bottom: 5px;
     }
+
     input[type="range"] {
       width: 100%;
     }
+
     .output {
       font-size: 1.4em;
       font-weight: bold;
       margin-top: 30px;
+      text-align: center;
+      color: #222;
     }
   </style>
 </head>
 <body>
   <h2>Final Grade Calculator</h2>
 
-  <div class="slider-block">
-    <label>Exam 1 (17%)</label>
-    <input type="range" id="exam1" min="0" max="100" value="80">
-    <span id="val_exam1">80</span>
+  <div class="section">
+    <h3>📝 Exams</h3>
+    <div class="slider-block">
+      <label>Exam 1 (17%)</label>
+      <input type="range" id="exam1" min="0" max="100" value="80">
+      <span id="val_exam1">80</span>
+    </div>
+    <div class="slider-block">
+      <label>Exam 2 (17%)</label>
+      <input type="range" id="exam2" min="0" max="100" value="80">
+      <span id="val_exam2">80</span>
+    </div>
+    <div class="slider-block">
+      <label>Exam 3 - Part A (50% of 17%)</label>
+      <input type="range" id="exam3a" min="0" max="100" value="80">
+      <span id="val_exam3a">80</span>
+    </div>
+    <div class="slider-block">
+      <label>Exam 3 - Part B (50% of 17%)</label>
+      <input type="range" id="exam3b" min="0" max="100" value="80">
+      <span id="val_exam3b">80</span>
+    </div>
   </div>
 
-  <div class="slider-block">
-    <label>Exam 2 (17%)</label>
-    <input type="range" id="exam2" min="0" max="100" value="80">
-    <span id="val_exam2">80</span>
+  <div class="section">
+    <h3>🎓 Final Exam</h3>
+    <div class="slider-block">
+      <label>Final Exam (30%)</label>
+      <input type="range" id="finalExam" min="0" max="100" value="80">
+      <span id="val_finalExam">80</span>
+    </div>
   </div>
 
-  <div class="slider-block">
-    <label>Exam 3 - Part A (50% of 17%)</label>
-    <input type="range" id="exam3a" min="0" max="100" value="80">
-    <span id="val_exam3a">80</span>
+  <div class="section">
+    <h3>📚 Homework</h3>
+    <div class="slider-block">
+      <label>Homework (9%)</label>
+      <input type="range" id="homework" min="0" max="100" value="90">
+      <span id="val_homework">90</span>
+    </div>
   </div>
 
-  <div class="slider-block">
-    <label>Exam 3 - Part B (50% of 17%)</label>
-    <input type="range" id="exam3b" min="0" max="100" value="80">
-    <span id="val_exam3b">80</span>
-  </div>
-
-  <div class="slider-block">
-    <label>Final Exam (30%)</label>
-    <input type="range" id="finalExam" min="0" max="100" value="80">
-    <span id="val_finalExam">80</span>
-  </div>
-
-  <div class="slider-block">
-    <label>Homework (9%)</label>
-    <input type="range" id="homework" min="0" max="100" value="90">
-    <span id="val_homework">90</span>
-  </div>
-
-  <h3>Quizzes (Each 2%)</h3>
-
-  <div class="slider-block">
-    <label>Quiz 1</label>
-    <input type="range" id="quiz1" min="0" max="100" value="90">
-    <span id="val_quiz1">90</span>
-  </div>
-
-  <div class="slider-block">
-    <label>Quiz 2</label>
-    <input type="range" id="quiz2" min="0" max="100" value="90">
-    <span id="val_quiz2">90</span>
-  </div>
-
-  <div class="slider-block">
-    <label>Quiz 3</label>
-    <input type="range" id="quiz3" min="0" max="100" value="90">
-    <span id="val_quiz3">90</span>
-  </div>
-
-  <div class="slider-block">
-    <label>Quiz 4</label>
-    <input type="range" id="quiz4" min="0" max="100" value="90">
-    <span id="val_quiz4">90</span>
-  </div>
-
-  <div class="slider-block">
-    <label>Quiz 5</label>
-    <input type="range" id="quiz5" min="0" max="100" value="90">
-    <span id="val_quiz5">90</span>
+  <div class="section">
+    <h3>📊 Quizzes (Each 2%)</h3>
+    <div class="slider-block">
+      <label>Quiz 1</label>
+      <input type="range" id="quiz1" min="0" max="100" value="90">
+      <span id="val_quiz1">90</span>
+    </div>
+    <div class="slider-block">
+      <label>Quiz 2</label>
+      <input type="range" id="quiz2" min="0" max="100" value="90">
+      <span id="val_quiz2">90</span>
+    </div>
+    <div class="slider-block">
+      <label>Quiz 3</label>
+      <input type="range" id="quiz3" min="0" max="100" value="90">
+      <span id="val_quiz3">90</span>
+    </div>
+    <div class="slider-block">
+      <label>Quiz 4</label>
+      <input type="range" id="quiz4" min="0" max="100" value="90">
+      <span id="val_quiz4">90</span>
+    </div>
+    <div class="slider-block">
+      <label>Quiz 5</label>
+      <input type="range" id="quiz5" min="0" max="100" value="90">
+      <span id="val_quiz5">90</span>
+    </div>
   </div>
 
   <div class="output" id="result">Final Score: -- | Letter Grade: --</div>
@@ -157,13 +183,12 @@
         "Final Score: " + total.toFixed(2) + " | Letter Grade: " + letter;
     }
 
-    // Attach event listeners
     sliders.forEach(id => {
       document.getElementById(id).addEventListener("input", update);
     });
 
-    // Initial calculation
     update();
   </script>
 </body>
 </html>
+
