--- a/grade.html
+++ b/grade.html
@@ -8,7 +8,7 @@
       font-family: Arial, sans-serif;
       margin: 0 auto;
       max-width: 750px;
-      background-color: #f0f2f5;
+      background-color: #B5D7C9;
       padding: 20px;
       padding-top: 100px;
     }
