--- a/grade.html
+++ b/grade.html
@@ -131,7 +131,11 @@
     </div>
   </div>
 
+  <div class="section">
+  <h3>📈 Final Grade</h3>
   <div class="output" id="result">Final Score: -- | Letter Grade: --</div>
+  </div>
+
 
   <script>
     const sliders = [
