--- a/grade.html
+++ b/grade.html
@@ -96,14 +96,14 @@
   <div class="section">
     <h3>📚 Homework</h3>
     <div class="slider-block">
-      <label>Homework (9%)</label>
+      <label>Homework (10%)</label>
       <input type="range" id="homework" min="0" max="100" value="90">
       <span id="val_homework">90</span>
     </div>
   </div>
 
   <div class="section">
-    <h3>📊 Quizzes (Each 2%)</h3>
+    <h3>📊 Quizzes (9%)</h3>
     <div class="slider-block">
       <label>Quiz 1</label>
       <input type="range" id="quiz1" min="0" max="100" value="90">
